fixed overflow image with  max-width

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,7 +136,7 @@ abbr[title], dfn[title] {
 
 #results li img {
 	padding: 5px;
-	
+	max-width: 400px;
 }
 
 #results li.highlight {
